# auto-pm-chatbot

./: README.md  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
my_agent/: few_shots.py  my_agent.py  server.py  test-assign-new.py  test.py  test_embed.py  test_request.py  test_table_union.py  tmp.py
my_agent/data/: long_term.txt  short_term.txt  table_union.py  table_union_plane.py
my_agent/experiment/: embedding.py  examples.py  query_analysis.py
my_agent/functions/: reports.py
my_agent/sqlalchemy/: create_db.py  myfile.db
my_agent/test/: test.py  test_table_union.py  tmp.py
my_agent/tools/: store.py  tools.py
