[project]
name = "pm-agent"
version = "0.1.0"
description = "an agent providing users with information about tasks"
authors = [
    {name = "Cong"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph (>=0.6.7,<0.7.0)",
    "langgraph-prebuilt (>=0.6.4,<0.7.0)",
    "langgraph-sdk (>=0.2.9,<0.3.0)",
    "langgraph-checkpoint-sqlite (>=2.0.11,<3.0.0)",
    "langsmith (>=0.4.30,<0.5.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-anthropic (>=0.3.20,<0.4.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-chroma (>=0.2.6,<0.3.0)",
    "lark (>=1.3.0,<2.0.0)",
    "http-client (>=0.1.22,<0.2.0)",
    "langgraph-cli[inmem] (>=0.4.2,<0.5.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "chatollama (>=0.2.13,<0.3.0)",
    "langchain-ollama (>=0.3.8,<0.4.0)",
    "ollama (>=0.6.0,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# ...
packages = [
    { include = "my_agent" },
]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"